Updated extensions
Bump Detekt to version 0.9.10-SNAPSHOT
Bump Dokka to version 1.0.4-SNAPSHOT
Bump Kotlin to version 1.1.0-SNAPSHOT